--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "cors": "^2.8.5",
     "lit-html": "^1.4.1"
   }
 }
